--- a/ITManagement/ManagementApp/templates/infrastructure/infrastructure_add.html
+++ b/ITManagement/ManagementApp/templates/infrastructure/infrastructure_add.html
@@ -11,8 +11,8 @@
         </div>
         
         <div class="form-group">
-            <label for="responsible">Responsible:</label>
-            {{ form.responsible }}
+            <label for="responsable">Responsable:</label>
+            {{ form.responsable }}
         </div>
         
         <input type="submit" value="Add" class="btn btn-primary">
