--- a/ITManagement/ManagementApp/templates/infrastructure/infrastructure_detail.html
+++ b/ITManagement/ManagementApp/templates/infrastructure/infrastructure_detail.html
@@ -2,5 +2,5 @@
 
 {% block content %} 
     <h1>{{ infrastructure.nom }}</h1>
-    <p>Responsible: {{ infrastructure.responsible.username }}</p>
+    <p>Responsable: {{ infrastructure.responsable.prenom }} {{ infrastructure.responsable.nom }}</p>
 {% endblock %}
