--- a/ITManagement/ManagementApp/templates/index.html
+++ b/ITManagement/ManagementApp/templates/index.html
@@ -23,7 +23,21 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'infrastructure_list' %}">Infrastructures</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'utilisateur_list' %}">utilisateurs</a>
+                </li>
             </ul>
+        </div>
+        <div class="navbar-nav ml-auto">
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'admin_logout' %}">Logout</a>
+                </li>
+            {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'admin_login' %}">Login</a>
+                </li>
+            {% endif %}
         </div>
         {% endblock %}
     </nav>
