--- a/ITManagement/ManagementApp/templates/ManagementApp/admin_login.html
+++ b/ITManagement/ManagementApp/templates/ManagementApp/admin_login.html
@@ -1,18 +1,31 @@
 {% extends 'index.html' %}
 {% block content %}
-
-{% if error_message %}
-<p>{{ error_message }}</p>
-{% endif %}
-
-<form method="POST">
-  {% csrf_token %}
-  <label for="username">Username:</label>
-  <input type="text" id="username" name="username" required><br><br>
-  <label for="password">Password:</label>
-  <input type="password" id="password" name="password" required><br><br>
-  <input type="submit" value="Login">
-</form>
-    
-    {% endblock %}
-    ```
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-header">Connexion</div>
+        <div class="card-body">
+          {% if error_message %}
+          <div class="alert alert-danger" role="alert">
+            {{ error_message }}
+          </div>
+          {% endif %}
+          <form method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+              <label for="username">Nom d'utilisateur:</label>
+              <input type="text" class="form-control" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+              <label for="password">Mot de passe:</label>
+              <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Se connecter</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
