--- a/ITManagement/ManagementApp/templates/index.html
+++ b/ITManagement/ManagementApp/templates/index.html
@@ -2,21 +2,55 @@
 <html lang="en">
 <head>
     {% block title %}
-    <title>IT Management</title>
+    <title>Mon site</title>
     {% endblock %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    
+    <style>
+        body.dark-mode {
+            background-color: #222;
+            color: #fff;
+        }
+    
+        body.light-mode {
+            background-color: #fff;
+            color: #222;
+        }
+    
+        .toggle-mode-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            padding: 10px;
+            background-color: #fff;
+            color: #222;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    
+        .toggle-mode-button.dark-mode {
+            background-color: #222;
+            color: #fff;
+        }
+    </style>
+    
 </head>
-<body>
+{% load static %}
+
+<body class="dark-mode">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="/">R&T Dev</a>
-        {% block menu %}
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="/">
+            <img src="{% static 'images/logo.jpg' %}" alt="Logo R&T Dev" style="width: 150px; height: auto;">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'index' %}">Accueil</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'machine_list' %}">Machines</a>
                 </li>
@@ -24,27 +58,61 @@
                     <a class="nav-link" href="{% url 'infrastructure_list' %}">Infrastructures</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'utilisateur_list' %}">utilisateurs</a>
+                    <a class="nav-link" href="{% url 'utilisateur_list' %}">Utilisateurs</a>
                 </li>
             </ul>
+            <ul class="navbar-nav ms-auto">
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin_logout' %}">Déconnexion</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'admin_login' %}">Connexion</a>
+                    </li>
+                {% endif %}
+            </ul>
         </div>
-        <div class="navbar-nav ml-auto">
-            {% if user.is_authenticated %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'admin_logout' %}">Logout</a>
-                </li>
-            {% else %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'admin_login' %}">Login</a>
-                </li>
-            {% endif %}
-        </div>
-        {% endblock %}
     </nav>
 
     <div class="container">
         {% block content %}
         {% endblock %}
     </div>
-</body>
+    
+    <button id="toggle-mode" type="button" class="toggle-mode-button btn btn-secondary">Mode sombre</button>
+    
+    <script>
+        const toggleModeButton = document.getElementById('toggle-mode');
+        const body = document.body;
+        const currentMode = localStorage.getItem('mode');
+    
+        if (currentMode === 'light') {
+            body.classList.remove('dark-mode');
+            body.classList.add('light-mode');
+            toggleModeButton.textContent = 'Mode clair';
+            toggleModeButton.classList.add('light-mode');
+        }
+    
+        toggleModeButton.addEventListener('click', () => {
+            const isDarkMode = body.classList.contains('dark-mode');
+    
+            if (isDarkMode) {
+                body.classList.remove('dark-mode');
+                body.classList.add('light-mode');
+                toggleModeButton.textContent = 'Mode clair';
+                toggleModeButton.classList.add('light-mode');
+                localStorage.setItem('mode', 'light');
+            } else {
+                body.classList.remove('light-mode');
+                body.classList.add('dark-mode');
+                toggleModeButton.textContent = 'Mode sombre';
+                toggleModeButton.classList.remove('light-mode');
+                localStorage.setItem('mode', 'dark');
+            }
+        });
+    </script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    </body>
 </html>
