--- a/ITManagement/ManagementApp/templates/infrastructure/infrastructure_list.html
+++ b/ITManagement/ManagementApp/templates/infrastructure/infrastructure_list.html
@@ -1,10 +1,12 @@
 {% extends 'index.html' %}
 
 {% block content %}
+<div class="container">
     <h1>Infrastructures</h1>
-    <a href="{% url 'infrastructure_add' %}" class="btn btn-primary btn-sm mb-3">Add Infrastructure</a>
-    <ul>
-        <table class="table">
+    <a href="{% url 'infrastructure_add' %}" class="btn btn-primary mb-3">Add Infrastructure</a>
+    <div class="card">
+    
+    <table class="table">
             <thead>
                 <tr>
                     <th>Nom</th>
@@ -24,5 +26,7 @@
                 {% endfor %}
             </tbody>
         </table>
-    </ul>
+</div>
+</div>
+
 {% endblock %}
