--- a/ITManagement/ManagementApp/templates/machine/machine_add.html
+++ b/ITManagement/ManagementApp/templates/machine/machine_add.html
@@ -1,30 +1,31 @@
 {% extends 'index.html' %}
-
 {% block content %}
-    <h1>Add Machine</h1>
-    <form method="post">
-        {% csrf_token %}
-        
-        <div class="form-group">
-            <label for="user">User:</label>
-            {{ form.user }}
+<div class="container">
+  <h2>Ajouter une machine</h2>
+  <form method="POST">
+    {% csrf_token %}
+    <div class="mb-3">
+      <label for="nom" class="form-label">Nom:</label>
+      {{ form.nom }}
         </div>
-        
-        <div class="form-group">
-            <label for="nom">Nom:</label>
-            {{ form.nom }}
-        </div>
-        
-        <div class="form-group">
-            <label for="maintenanceDate">Maintenance Date:</label>
-            {{ form.maintenanceDate }}
-        </div>
-        
-        <div class="form-group">
-            <label for="mach">Type:</label>
-            {{ form.mach }}
-        </div>
-        
-        <input type="submit" value="Add" class="btn btn-primary">
-    </form>
+    <div class="mb-3">
+      <label for="maintenanceDate" class="form-label">Date de maintenance:</label>
+      {{ form.maintenanceDate }}
+    </div>
+    <div class="mb-3">
+      <label for="ip" class="form-label">Ip:</label>
+      {{ form.ip }}
+    </div>
+    <div class="mb-3">
+      <label for="mach" class="form-label">Type de machine:</label>
+      {{ form.mach }}
+    </div>
+    <div class="mb-3">
+      <label for="user" class="form-label">Utilisateur:</label>
+         {{ form.user }}
+    </div>
+
+    <button type="submit" class="btn btn-primary">Ajouter</button>
+  </form>
+</div>
 {% endblock %}
