--- a/ITManagement/ManagementApp/templates/infrastructure/infrastructure_add.html
+++ b/ITManagement/ManagementApp/templates/infrastructure/infrastructure_add.html
@@ -1,27 +1,32 @@
 {% extends 'index.html' %}
+
 {% block content %}
 <div class="container">
-  <h2>Ajouter une infrastructure</h2>
-  <form method="POST">
-    {% csrf_token %}
-    <div class="mb-3">
-      <label for="nom" class="form-label">Nom:</label>
-      {{ form.nom }}
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h2>Ajouter une infrastructure</h2>
+      <form method="POST">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="nom" class="form-label">Nom:</label>
+          {{ form.nom }}
+        </div>
+        <div class="mb-3">
+          <label for="etage" class="form-label">Étage:</label>
+          {{ form.etage }}
+        </div>
+        <div class="mb-3">
+          <label for="responsable" class="form-label">Responsable:</label>
+          {{ form.responsable }}
+        </div>
+        <div class="mb-3">
+          <label for="machine" class="form-label">Machine:</label>
+          {{ form.machine }}
+        </div>
+        
+        <button type="submit" class="btn btn-primary">Ajouter</button>
+      </form>
     </div>
-    <div class="mb-3">
-      <label for="etage" class="form-label">Etage:</label>
-      {{ form.etage }}
-    </div>
-    <div class="mb-3">
-      <label for="responsable" class="form-label">Responsable:</label>
-        {{ form.responsable }}
-    </div>
-    <div class="mb-3">
-      <label for="machine" class="form-label">Machine:</label>
-        {{ form.machine }}
-    </div>
-    
-    <button type="submit" class="btn btn-primary">Ajouter</button>
-  </form>
+  </div>
 </div>
 {% endblock %}
