--- a/ITManagement/ManagementApp/templates/machine/confirm_delete.html
+++ b/ITManagement/ManagementApp/templates/machine/confirm_delete.html
@@ -1,11 +1,19 @@
 {% extends 'index.html' %}
 
 {% block content %}
-  <h1>Supprimer machine</h1>
-  <p>Êtes-vous sûr de vouloir supprimer machine "{{ machine.nom }} " ?</p>
-  <form method="post">
-    {% csrf_token %}
-    <button type="submit">Confirmer</button>
-    <button type="submit" formaction="{% url 'machine_list' %}">Annuler</button>
-  </form>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h1 class="mb-4">Supprimer infrastructure</h1>
+      <p class="mb-4">Êtes-vous sûr de vouloir supprimer l'infrastructure "{{ machine.nom }}" ?</p>
+      <form method="post">
+        {% csrf_token %}
+        <div class="d-grid gap-2">
+          <button type="submit" class="btn btn-danger">Confirmer</button>
+          <button type="submit" formaction="{% url 'infrastructure_list' %}" class="btn btn-secondary">Annuler</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
