--- a/ITManagement/ManagementApp/templates/utilisateur/form.html
+++ b/ITManagement/ManagementApp/templates/utilisateur/form.html
@@ -1,27 +1,32 @@
 {% extends 'index.html' %}
+
 {% block content %}
 <div class="container">
-  <h2>Ajouter un utilisateur</h2>
-  <form method="POST">
-    {% csrf_token %}
-    <div class="mb-3">
-      <label for="nom" class="form-label">Nom</label>
-      {{ form.nom }}
-    </div>
-    <div class="mb-3">
-      <label for="prenom" class="form-label">Prénom</label>
-      {{ form.prenom }}
-    </div>
-    <div class="mb-3">
-      <label for="email" class="form-label">Email</label>
-      {{ form.email }}
-    </div>
-    <div class="mb-3">
-      <label for="role" class="form-label">Rôle</label>
-      {{ form.role }}
-    </div>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <h2>Ajouter un utilisateur</h2>
+      <form method="POST">
+        {% csrf_token %}
+        <div class="mb-3">
+          <label for="nom" class="form-label">Nom</label>
+          {{ form.nom }}
+        </div>
+        <div class="mb-3">
+          <label for="prenom" class="form-label">Prénom</label>
+          {{ form.prenom }}
+        </div>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          {{ form.email }}
+        </div>
+        <div class="mb-3">
+          <label for="role" class="form-label">Rôle</label>
+          {{ form.role }}
+        </div>
 
-    <button type="submit" class="btn btn-primary">Ajouter</button>
-  </form>
+        <button type="submit" class="btn btn-primary">Ajouter</button>
+      </form>
+    </div>
+  </div>
 </div>
 {% endblock %}
